# automata-dcap-v3-attestation

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md  foundry.toml  hardhat.config.ts  package-lock.json  package.json  remappings.txt  rust-toolchain
.github/workflows/: foundry.yml  hardhat.yml
assets/0224/: identity.json  tcbInfo.json
assets/0524/: identity.json  tcb.json
assets/0624/: identity.json  tcbinfo.json
broadcast/DeployDCAPScript.s.sol/421614/: deployAttestation-latest.json
broadcast/DeployDCAPScript.s.sol/59140/: deployAttestation-latest.json
broadcast/DeployRisc0Verifier.s.sol/421614/: run-latest.json
contracts/: AutomataDcapV3Attestation.sol
contracts/assets/: fetch_tcb.sh  identity.json  tcbInfo.json
contracts/assets/latest/: identity.json
contracts/assets/latest/tcb_info/: 00606a000000.json  00906ed50000.json  00a067110000.json
contracts/base/: EnclaveIdBase.sol  EnclaveIdbase.sol  PEMCertChainBase.sol  TCBInfoBase.sol
contracts/interfaces/: IAttestation.sol  ISigVerifyLib.sol
contracts/lib/: EnclaveIdStruct.sol  PEMCertChainLib.sol  TCBInfoStruct.sol
contracts/lib/QuoteV3Auth/: V3Parser.sol  V3Struct.sol
contracts/lib/interfaces/: IPEMCertChainLib.sol
contracts/utils/: Asn1Decode.sol  BytesUtils.sol  EllipticCurveLib.sol  SHA1.sol  SigVerifyLib.sol  X509DateUtils.sol
contracts/v3/: AutomataDcapV3Attestation.sol
contracts/v3/QuoteV3Auth/: V3Parser.sol  V3Struct.sol
crates/: README.md
crates/automata-dcap-v3-attestation/: extract_certs.rs  generate_verifier.rs  main.rs  utils.rs  verify_quote_certs.rs
crates/dcap-quote/: Cargo.toml  test_quote.hex
crates/dcap-quote/src/: asn1.rs  lib.rs
crates/halo2-secp256r1-circuit/: Cargo.toml
crates/halo2-secp256r1-circuit/src/: circuit.rs  lib.rs  verifier.rs
forge-script/: ConfigureDCAPScript.s.sol  DeployDCAPScript.s.sol  DeployRisc0Verifier.s.sol  deploy.sh  setup.sh
forge-script/utils/: CRLParser.s.sol
forge-script/v3/: ConfigDCAPScript.s.sol  DeployDCAPScript.s.sol
forge-test/: AutomataDcapAttestationTest.t.sol  AutomataDcapV3AttestationTest.t.sol
forge-test/utils/: DcapTestUtils.t.sol  PCCSSetup.sol  PCCSSetupBase.sol  RiscZeroSetup.sol
forge-test/v3/: AutomataDcapV3AttestationTest.t.sol
forge-test/v3/simple/: SimpleDCAPTest.t.sol  SimplePCCSSetup.sol
scripts/: deploy.ts
test/: AutomataDcapV3AttestationTest.t.sol  sample.test.ts
test/utils/: pccs.ts
