[package]
name = "halo2-secp256r1-circuit"
version = "0.1.0"
edition = "2018"
authors = ["Automata Team"]

[features]
default = ["display", "halo2-pse"]
display = ["halo2-base/display", "halo2-ecc/display", "ark-std"]
halo2-pse = ["halo2-base/halo2-pse", "halo2-ecc/halo2-pse", "snark-verifier/halo2-pse", "snark_verifier_sdk/halo2-pse"]

[dependencies]
halo2-base = { git = "https://github.com/automata-network/halo2-lib.git", branch = "develop" }
halo2-ecc = { git = "https://github.com/automata-network/halo2-lib.git", branch = "develop" }
snark_verifier_sdk = { git = "https://github.com/scroll-tech/snark-verifier.git", default-features = false, package = "snark-verifier-sdk", features = ["loader_halo2", "loader_evm"] }
snark-verifier = { git = "https://github.com/scroll-tech/snark-verifier.git", default-features = false, package = "snark-verifier", features = ["loader_halo2", "loader_evm"] }
ark-std = { version = "0.3.0", features = ["print-trace"], optional = true }

ring = "0.17.7"
sha2 = "0.10.8"
rand = "0.8.5"

[dev-dependencies]
ark-std = { version = "0.3.0", features = ["print-trace"] }
ethereum-types = { version = "0.14", default-features = false, features = ["std"] }
